# memx

./: .gitignore  pyproject.toml
memx/: __init__.py  _version.py
memx/_embedding/: __init__.py  _base.py  openai.py
memx/_llm/: __init__.py  openai.py
memx/_llms/: __init__.py  openai.py
memx/_mem/: mongo.py
memx/_mems/: mongo.py
memx/_utils/: kwargs.py
memx/_vector_store/: __init__.py  qdrant.py
memx/adapter/: __init__.py
memx/adapter/embeds/: __init__.py  _base.py  openai.py
memx/adapter/llms/: _base.py  openai.py
memx/adapter/mem/: _base.py  mongo.py
memx/adapter/vecs/: __init__.py  _base.py  qdrant.py
memx/embeds/: __init__.py  _base.py  openai.py
memx/llms/: __init__.py  _base.py  openai.py
memx/mem/: __init__.py  _base.py  mongo.py
memx/persistence/documents/: __init__.py
memx/utils/: __init__.py
memx/vecs/: __init__.py  _base.py  qdrant.py
