[project]
name = "memx"
version = "0.1.0"
description = ""
authors = [
    {name = "BoChen SHEN",email = "6godddddd@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11,<3.13"
dependencies = [
    "openai (>=1.93.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
