[project]
name = "memx"
version = "0.1.0"
description = ""
authors = [
    {name = "BoChen SHEN",email = "6godddddd@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11,<3.13"
dependencies = [
]


[project.optional-dependencies]
mongo = ["beanie (>=1.30.0,<2.0.0)", "motor (>=3.7.1,<4.0.0)"]
openai = ["openai (>=1.93.0,<2.0.0)"]
test = [
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)"
]
dev = [
    "beanie (>=1.30.0,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "openai (>=1.93.0,<2.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
